# drug-success-lite

./: .gitignore  README.md  STRATIFY_SEEN_DRUG_PLAN.md  app.py  calibration_check.py  cohort_summary.ipynb  drug_disease_scan.py  make_figure1.py  make_figures.py  pyproject.toml  setup_inputs.sh
chemap/: ChemAP.py  FP_predictor_train.py  README.md  SMILES_predictor_train.py  Teacher_train.py  data_preprocessing.py  prepare_candidate_input.py  pyproject.toml  repro_drugapp.py  run_experiment.py
chemap/dataset/: example.csv
chemap/dataset/ClinicalTrials/: clinical_fail_2024_05.csv
chemap/dataset/DrugApp/: All_training_feature_vectors.csv
chemap/dataset/FDA/: FDA_2023_approved.csv
chemap/src/: Dataprocessing.py  loss_function.py  models.py  utils.py
docs/: EXPERIMENTS_AND_RESULTS.md  HINT_VS_XGBOOST_ANALYSIS.md  PAG_Changes.txt  experiment_map.txt
dsm/: __init__.py  _admet_columns.py  ablation.py  cli.py  cohort.py  compare_hint.py  config.py  dataset.py  datasets.py  embed_swap.py  encoders.py  evaluate.py  experiments.py  explore_data.ipynb  explore_indications.ipynb  features.py  hint_export.py  icd_hierarchy.py  model.py  plots.py  resolve.py  run.py  serve.py  splits.py  stratify.py  train.py
dsm/assets/: icd10cm_hierarchy.json
dsm/models/: __init__.py  chemap_adapter.py  hint_adapter.py  sklearn_adapter.py
figures/: FIgure_1_pag.html
hint/: .gitignore  CLAUDE.md  build_sentence_embeddings.py  compare_datasets.ipynb  pyproject.toml  run_experiment.py  run_hint_on_dataset.py  tutorial_benchmark.ipynb
hint/HINT/: learn_advancement.py  learn_indication.py  learn_multiple_aim.py  learn_phaseI.py  learn_phaseII.py  learn_phaseIII.py  protocol_encode.py  run_inference.py  sponsor_inference.py
hint/docs/: eligibility_optimization_notes.md
plans/: HINT_COMPARISON.md
scripts/: build_icd_hierarchy.py  confidence_check.py  make_serving_data.py
tests/: test_smoke.py
web/: index.html  predict.html
