[project]
name = "drug-success-lite"
version = "0.1.0"
description = "Stripped-down phase-transition success modeling: load candidate + trial data, train, output metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.0.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
